[package]
name = "bool-enum"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/Rick-Phoenix/bool-enum"
keywords = ["boolean", "enums"]
description = "A proc macro that generates a Yes/No enum that dereferences to a boolean"
license = "Apache-2.0"

readme = true

[dependencies]
paste = "1"
