[package]
name = "bool-enum"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/Rick-Phoenix/bool-enum"
keywords = ["boolean", "enums"]
description = "A macro for generating boolean-like enums that support bitwise and boolean operations"
license = "Apache-2.0"

readme = true

[dev-dependencies]
paste = "1"
